# LogFilter

./: .gitignore  gui.kv  main.py
LogFilter/: CMakeLists.txt  build.sh  fileProcessWorker.cpp  fileProcessWorker.h  filecontext.cpp  filecontext.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  simpleregex.cpp  simpleregex.h
LogFilter/.qt/: QtDeploySupport.cmake
build-LogFilter-Desktop_Qt_6_7_0_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  LogFilter  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-LogFilter-Desktop_Qt_6_7_0_GCC_64bit-Debug/.cmake/api/v1/reply/: cache-v2-711954a696d3bd167c2f.json  cmakeFiles-v1-4aab3835e04e4fa93e80.json  codemodel-v2-673a7974a306a658771f.json  index-2023-09-14T12-56-00-0738.json  target-LogFilter-Debug-6299096f679773db5272.json  target-LogFilter_autogen-Debug-0b7c039dd20184431120.json  target-LogFilter_autogen_timestamp_deps-Debug-fbb43c7f2a4be95da35b.json
build-LogFilter-Desktop_Qt_6_7_0_GCC_64bit-Debug/.qt/: QtDeploySupport.cmake
build-LogFilter-Desktop_Qt_6_7_0_GCC_64bit-Debug/LogFilter_autogen/: deps
build-LogFilter-Desktop_Qt_6_7_0_GCC_64bit-Debug/LogFilter_autogen/EWIEGA46WW/: moc_mainwindow.cpp.d
build-LogFilter-Desktop_Qt_6_7_0_GCC_64bit-Debug/LogFilter_autogen/include/: ui_mainwindow.h
build-LogFilter-Desktop_Qt_6_7_0_GCC_64bit-Profile/: .ninja_deps  .ninja_log  CMakeCache.txt  LogFilter  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-LogFilter-Desktop_Qt_6_7_0_GCC_64bit-Profile/.cmake/api/v1/reply/: cache-v2-325093c2750e4d74096d.json  cmakeFiles-v1-d882fa5c9c4e39eb3dab.json  codemodel-v2-33456012a5829275c5c2.json  codemodel-v2-ad739feb6257d54bc7ae.json  directory-.-RelWithDebInfo-2e191c4c3bca4e8e8491.json  directory-.-RelWithDebInfo-802ff537c5e980455616.json  index-2023-09-14T13-54-58-0893.json  index-2023-09-18T07-03-15-0476.json  target-LogFilter-RelWithDebInfo-2818a958ddbf3d6814ae.json  target-LogFilter-RelWithDebInfo-cb05d490f337f46830a6.json
build-LogFilter-Desktop_Qt_6_7_0_GCC_64bit-Profile/.cmake/api/v1/reply.prev/: cmakeFiles-v1-28235565412b5fd4f451.json  target-LogFilter_autogen-RelWithDebInfo-d90e1699df285b99e2cb.json  target-LogFilter_autogen_timestamp_deps-RelWithDebInfo-626e5d10dd75fa46ed40.json
build-LogFilter-Desktop_Qt_6_7_0_GCC_64bit-Profile/.qt/: QtDeploySupport.cmake
build-LogFilter-Desktop_Qt_6_7_0_GCC_64bit-Profile/LogFilter_autogen/: deps  mocs_compilation.cpp
build-LogFilter-Desktop_Qt_6_7_0_GCC_64bit-Profile/LogFilter_autogen/EWIEGA46WW/: moc_filecontext.cpp  moc_filecontext.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d
build-LogFilter-Desktop_Qt_6_7_0_GCC_64bit-Profile/LogFilter_autogen/include/: ui_mainwindow.h
